# gcal-to-discord

./: .dockerignore  .env.example  .gitignore  DISCORD_CHANNEL_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/cron/: crontab.example  gcal-sync.sh
examples/kubernetes/: QUICKSTART.md  README.md  configmap.yaml  cronjob.yaml  namespace.yaml  secrets-example.yaml
examples/kubernetes/scripts/: cleanup.sh  create-secrets.sh  deploy.sh
examples/systemd/: README.md  gcal-to-discord.service  gcal-to-discord.timer
scripts/: setup_check.py
src/gcal_to_discord/: __init__.py  config.py  discord_client.py  google_calendar.py  main.py
tests/: __init__.py  test_config.py  test_url_matching.py
